--- a/django-coding-test-reactjs/django-coding-test/src/product/templates/products/list.html
+++ b/django-coding-test-reactjs/django-coding-test/src/product/templates/products/list.html
@@ -4,125 +4,142 @@
 
 {% block content %}
 
-    <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">Products</h1>
-    </div>
+  <div class="d-sm-flex align-items-center justify-content-between mb-4">
+    <h1 class="h3 mb-0 text-gray-800">Products</h1>
+  </div>
 
 
-    <div class="card">
-        <form action="" method="get" class="card-header">
-            <div class="form-row justify-content-between">
-                <div class="col-md-2">
-                    <input type="text" name="title" placeholder="Product Title" class="form-control">
-                </div>
-                <div class="col-md-2">
-                    <select name="variant" id="" class="form-control">
-                        <option selected disabled>--Select A Variant--</option>
+  <div class="card">
+    <form action="" method="get" class="card-header">
+      <div class="form-row justify-content-between">
+        <div class="col-md-2">
+          <input type="text" name="title" placeholder="Product Title" class="form-control">
+        </div>
+        <div class="col-md-2">
+          <select name="variant" id="" class="form-control">
+            <option selected disabled>--Select A Variant--</option>
+            {% for variant in variants %}
+              <optgroup label="{{variant.title}}">
+                {% for product_variant in variant.productvariant_set.all %}
+                  <option value="{{variant.title}}_{{product_variant.variant_title}}">{{product_variant.variant_title}}</option>
+                {% endfor %}
+              </optgroup>
+            {% endfor %}
 
-                    </select>
-                </div>
-
-                <div class="col-md-3">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">Price Range</span>
-                        </div>
-                        <input type="text" name="price_from" aria-label="First name" placeholder="From"
-                               class="form-control">
-                        <input type="text" name="price_to" aria-label="Last name" placeholder="To" class="form-control">
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <input type="date" name="date" placeholder="Date" class="form-control">
-                </div>
-                <div class="col-md-1">
-                    <button type="submit" class="btn btn-primary float-right"><i class="fa fa-search"></i></button>
-                </div>
-            </div>
-        </form>
-
-        <div class="card-body">
-            <div class="table-response">
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Title</th>
-                        <th>Description</th>
-                        <th>Variant</th>
-                        <th width="150px">Action</th>
-                    </tr>
-                    </thead>
-
-                    <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>T-Shirt <br> Created at : 25-Aug-2020</td>
-                        <td>Quality product in low cost</td>
-                        <td>
-                            <dl class="row mb-0" style="height: 80px; overflow: hidden" id="variant">
-                                <dt class="col-sm-3 pb-0">
-                                    XL/ Black/ Full
-                                </dt>
-                                <dd class="col-sm-9">
-                                    <dl class="row mb-0">
-                                        <dd class="col-sm-4 pb-0">Price : 200.0</dd>
-                                        <dd class="col-sm-8 pb-0">InStock : 50.</dd>
-                                    </dl>
-                                </dd>
-                                <dt class="col-sm-3 pb-0">
-                                    XL/ Black/ Half
-                                </dt>
-                                <dd class="col-sm-9">
-                                    <dl class="row mb-0">
-                                        <dd class="col-sm-4 pb-0">Price : 200.0</dd>
-                                        <dd class="col-sm-8 pb-0">InStock : 50.</dd>
-                                    </dl>
-                                </dd>
-                                <dt class="col-sm-3 pb-0">
-                                    L/ Black/ Full
-                                </dt>
-                                <dd class="col-sm-9">
-                                    <dl class="row mb-0">
-                                        <dd class="col-sm-4 pb-0">Price : 200.0</dd>
-                                        <dd class="col-sm-8 pb-0">InStock : 50.</dd>
-                                    </dl>
-                                </dd>
-                                <dt class="col-sm-3 pb-0">
-                                    L/ Black/ Half
-                                </dt>
-                                <dd class="col-sm-9">
-                                    <dl class="row mb-0">
-                                        <dd class="col-sm-4 pb-0">Price : 200.0</dd>
-                                        <dd class="col-sm-8 pb-0">InStock : 50.</dd>
-                                    </dl>
-                                </dd>
-                            </dl>
-                            <button onclick="$('#variant').toggleClass('h-auto')" class="btn btn-sm btn-link">Show more
-                            </button>
-                        </td>
-                        <td>
-                            <div class="btn-group btn-group-sm">
-                                <a href="" class="btn btn-success">Edit</a>
-                            </div>
-                        </td>
-                    </tr>
-                    </tbody>
-
-                </table>
-            </div>
-
+          </select>
         </div>
 
-        <div class="card-footer">
-            <div class="row justify-content-between">
-                <div class="col-md-6">
-                    <p>Showing 1 to 10 out of 100</p>
-                </div>
-                <div class="col-md-2">
-
-                </div>
+        <div class="col-md-3">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text">Price Range</span>
             </div>
+            <input type="text" name="price_from" aria-label="First name" placeholder="From"
+                                                                         class="form-control">
+            <input type="text" name="price_to" aria-label="Last name" placeholder="To" class="form-control">
+          </div>
         </div>
+        <div class="col-md-2">
+          <input type="date" name="date" placeholder="Date" class="form-control">
+        </div>
+        <div class="col-md-1">
+          <button type="submit" class="btn btn-primary float-right"><i class="fa fa-search"></i></button>
+        </div>
+      </div>
+    </form>
+
+    <div class="card-body">
+      <div class="table-response">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Title</th>
+              <th>Description</th>
+              <th>Variant</th>
+              <th width="150px">Action</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            {% for product in page_obj %}
+              <tr>
+
+                <td>{{ product.id }}</td>
+                <td>{{ product.title }}<br> Created at : {{ product.created_at | timesince }}</td>
+                <td>{{ product.description }}</td>
+                <td>
+                  <dl class="row mb-0" style="height: 80px; overflow: hidden" id="variant">
+                    {% for product_variant_price in product.productvariantprice_set.all %}
+                      <dt class="col-sm-3 pb-0">
+                      {{ product_variant_price.product_variant_one.variant_title }}/ {{ product_variant_price.product_variant_two.variant_title }}/ {{ product_variant_price.product_variant_three.variant_title }}
+                      </dt>
+                      <dd class="col-sm-9">
+                      <dl class="row mb-0">
+                        <dd class="col-sm-3 pb-0">Price : {{ product_variant_price.price | floatformat:2}}</dd>
+                        <dd class="col-sm-6 pb-0">InStock : {{ product_variant_price.stock | floatformat:2}}</dd>
+                        <dd class="col-sm-3 pb-0"><a href="{% url 'product:edit.product_variant_price' product_variant_price.id %}" class="btn btn-success btn-sm">Edit Variant</a></dd>
+                      </dl>
+                      </dd>
+                    {% endfor %}
+                  </dl>
+                  <button onclick="$('#variant').toggleClass('h-auto')" class="btn btn-sm btn-link">Show more
+                  </button>
+                </td>
+                <td>
+                  <div class="btn-group btn-group-sm">
+                    <a href="{% url 'product:edit.product' product.id %}" class="btn btn-success">Edit</a>
+                  </div>
+                </td>
+              </tr>
+            {% endfor %}
+          </tbody>
+
+        </table>
+      </div>
+
     </div>
+
+    <div class="card-footer">
+      <div class="row justify-content-between">
+        <div class="col-md-6">
+          <p>Showing {{ page_obj.start_index }} to {{ page_obj.end_index }} out of {{page_obj.paginator.count}}</p>
+        </div>
+        <div class="col-md-2">
+          <div aria-label="...">
+            <ul class="pagination">
+              {% if page_obj.has_previous %}
+                <li class="page-item">
+                  <a class="page-link" href="?page={{ page_obj.previous_page_number }}"><</a>
+                </li>
+              {% else %}
+                <li class="page-item">
+                  <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}"><</a>
+                </li>
+              {% endif %}
+              {% for number in page_obj.paginator.page_range %}
+                {% if  page_obj.number == number %}
+                  <li class="page-item active">
+                    <a class="page-link" href="?page={{ page_obj.number }}">{{ page_obj.number }} <span class="sr-only">(current)</span></a>
+                  </li>
+                {% else %}
+                  <li class="page-item"><a class="page-link" href="?page={{ number }}">{{ number }}</a></li>
+                {% endif %}
+              {% endfor %}
+              {% if page_obj.has_next %}
+                <li class="page-item">
+                  <a class="page-link" href="?page={{ page_obj.next_page_number }}">></a>
+                </li>
+              {% else %}
+                <li class="page-item">
+                  <a class="page-link" href="?page=1">></a>
+                </li>
+              {% endif %}
+            </ul>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
